[package]
name = "abs_sync"
version = "0.2.0"
edition = "2024"

authors = ["lino <lino_snsalias@outlook.com>"]
description = "Abstraction of synchronization for rust async/await"
repository = "https://github.com/ljsnogard/abs_sync"
keywords = ["async", "traits"]
categories = ["no-std"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
gen_mcf_macro = { git = "https://github.com/ljsnogard/gen_mcf_macro.rs.git", branch = "main" }

[dev-dependencies]
futures-lite = { version = "2" }
pin-utils = { version = "*" }
tokio = { version = "1", features = ["full"] }
log = { version = "0.4.*" }
env_logger = { version = "0.11.*" }