[package]
name = "abs_sync"
version = "0.3.0"
edition = "2024"

authors = ["lino <lino_snsalias@outlook.com>"]
description = "ABStraction of SYNchronization"
repository = "https://github.com/ljsnogard/abs_sync"
keywords = ["async", "traits"]
categories = ["no-std"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dev-dependencies]
futures-lite = { version = "2" }
pin-utils = { version = "0.1.0" }
tokio = { version = "1", features = ["full"] }
log = { version = "0.4.*" }
env_logger = { version = "0.11.*" }